tests/semantic/valid/11_r3_shadow_param_with_let_in_body.hulk
function f(x) => let x = "a" in x;

print(f(1));
