tests/semantic/invalid/56_t_let_undefined_type.hulk
let x:UnknownType = 1 in print(x);
